--- a/contrat-service-dto/pom.xml
+++ b/contrat-service-dto/pom.xml
@@ -16,7 +16,12 @@
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-
+    <distributionManagement>
+        <repository>
+            <id>tassyircom-snapshot</id>
+            <url>http://172.31.87.101:8081/tassyircom-snapshot/</url>
+        </repository>
+    </distributionManagement>
     <build>
         <plugins>
             <plugin>
