--- a/contrat-domain/contrat-application-service/pom.xml
+++ b/contrat-domain/contrat-application-service/pom.xml
@@ -32,6 +32,10 @@
             <groupId>ma.sirh.tassyircom</groupId>
             <artifactId>contrat-service-dto</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
